replaced new Integer() by Integer.valueOf()